[package]
name = "flood"
version = "0.1.0"
authors = ["Dunja Lalic <dunja.lalic@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.93"
num-rational = "0.4.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
